# connect-four

./: .gitignore  Cargo.toml  PERFORMANCE_GUIDE.md  README.md  build.sh  index.html  package.json  run_benchmarks.sh
.github/workflows/: deploy.yml
benches/: game_benchmark.rs
rs-four/: Cargo.toml  index.html
src/: checkers.rs  four.rs  lib.rs  main.rs  minmax.rs
webpage/: CHECKERS_README.md  checkers.html  game-hub.html  index.html  package.json
